--- a/app/templates/components/gloss-kill-line.hbs
+++ b/app/templates/components/gloss-kill-line.hbs
@@ -4,7 +4,9 @@
 <td>{{kill.victim.name}}</td>
 <td class="Gloss-report--ship"><img src="https://imageserver.eveonline.com/Type/{{kill.ship.id}}_64.png" class="Gloss-report--image" />{{kill.ship.name}}</td>
 <td>
-  <button class="Gloss-button Gloss-button--mini" {{action 'viewAssociatedFleet' bubbles=false}}>
-    View
-  </button>
+  {{#if kill.fleet.id}}
+    <button class="Gloss-button Gloss-button--mini" {{action 'viewAssociatedFleet' bubbles=false}}>
+      View
+    </button>
+  {{/if}}
 </td>
