--- a/app/templates/discover/map.hbs
+++ b/app/templates/discover/map.hbs
@@ -1,6 +1,9 @@
 {{#if loading}}
-  <div class="ui active inverted text loader">Visualizing New Eden</div>
+
+  <div class="ui active inverted text loader">Downloading initial fleet data from Sentinel<br><small>This only happens once</small></div>
+
 {{else}}
+
   {{gloss-map-universe
     regions=regions
     systems=systems
@@ -8,9 +11,11 @@
     selectRegion=(action 'selectRegion')
     selectedRegion=selectedRegion
     }}
+
 {{/if}}
 
 {{#if (and selectedRegion fleetDisplay.length)}}
+
   <div class="Gloss-sidebar Gloss-sidebar--map Gloss-sidebar--shown">
     <div class="Gloss-notifier Gloss-module">
       <div class="Gloss-stream Gloss-scroller">
@@ -25,16 +30,13 @@
         {{#each (sort-by 'lastSeen:desc' fleetDisplay) as |fleet|}}
           {{#if fleet.characters.length}}
             {{gloss-threat-map
-              model=fleet
+              fleet=fleet
               selectFleet=(action 'selectFleet')
               }}
             {{/if}}
         {{/each}}
       </div>
     </div>
-
-    {{!-- <button class="Gloss-button Gloss-button--small" {{action 'resetMap' this}}>
-      Return
-    </button> --}}
   </div>
+
 {{/if}}
