--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -366,7 +366,7 @@ strong {
     margin-top: -350px !important;
   }
 
-  @media screen and (max-width: 1024px) and (max-height: 768px) {
+  @media screen and (max-height: 768px) {
     max-height: 98vh !important;
     margin: 1vh 1vw !important;
     top: 0 !important;
