--- a/app/templates/discover/fleets.hbs
+++ b/app/templates/discover/fleets.hbs
@@ -5,7 +5,7 @@
 {{else}}
 
   <div class="ui link cards">
-    <table class="ui table inverted" cellpadding="10">
+    <table class="ui table inverted mb2" cellpadding="10">
       <thead>
         <th>Region</th>
         <th>System</th>
