--- a/app/styles/components/index.scss
+++ b/app/styles/components/index.scss
@@ -1,4 +1,6 @@
 @import 'gloss-map';
+@import 'gloss-map-region';
+@import 'gloss-map-regions';
 @import 'gloss-message';
 @import 'gloss-nav-switch';
 @import 'gloss-notification';
