remove intel service, consolidate to discovery

--- a/app/templates/components/gloss-stats.hbs
+++ b/app/templates/components/gloss-stats.hbs
@@ -10,14 +10,14 @@
 
   {{gloss-shard
     label="Fleets"
-    value=fleets
+    value=fleets.length
     loaded=loadUiElements
     loadOrder=2
     }}
 
   {{gloss-shard
     label="Kills"
-    value=kills
+    value=kills.length
     loaded=loadUiElements
     loadOrder=3
     }}
