--- a/app/templates/discover.hbs
+++ b/app/templates/discover.hbs
@@ -11,15 +11,13 @@
     context=context
     loadUiElements=loadUiElements
     isConnected=isConnected
-    fleets=fleets
-    kills=kills
     }}
 
   <div class="ui grid">
     <div class="three columns row no-gutter p0 mt2 mb1">
       <div class="column">
         {{#link-to 'discover.map' class='Gloss-button Gloss-button--small'}}
-          Map
+          Universe
         {{/link-to}}
       </div>
 
