--- a/app/templates/navigate/index.hbs
+++ b/app/templates/navigate/index.hbs
@@ -9,6 +9,6 @@
   {{/each}}
 
   {{#unless fleets.length}}
-    <p class="mt2 ml1">No active fleets in this region.</p>
+    <p class="mt2 ml1">No recent activity to report.</p>
   {{/unless}}
 </div>
